fix: spaces for filter to be visible

--- a/src/pages/CatalogPage/CatalogPage.module.scss
+++ b/src/pages/CatalogPage/CatalogPage.module.scss
@@ -163,7 +163,7 @@
   .details {
     position: absolute;
     right: 0;
-    top: 150px;
+    top: 200px;
     margin: 30px;
     display: flex;
     flex-direction: column;
